--- a/general/achamanam.html
+++ b/general/achamanam.html
@@ -1,31 +1,29 @@
 <h2>ಆಚಮನಂ <span class="ENG">(Achamanam)</span></h2>
 
 <p>
-    First 3 verses, sip water and recite, ending with `svaha` (males) and `namah` (females). Then, wash your hands. Only lower lip should touch palm. No slurping sound.
+    First 3 verses, sip water and recite, ending with `svaha` (males)
+    and `namah` (females). Then, wash your hands.
+    Only lower lip should touch palm. No slurping sound.
 </p>
 
 <p>
     ಓಂ ಕೇಶವಾಯ ಸ್ವಾಹಾ → ಓಂ ನಾರಾಯಣಾಯ ಸ್ವಾಹಾ → ಓಂ ಮಾಧವಾಯ ಸ್ವಾಹಾ<br>
-    <span class="ENG">Om Keshavaya Svaha → Om Narayanaya Svaha → Om Madhavaya Svaha<br></span>
-
     ಗೋವಿಂದಾಯ ನಮಃ → ವಿಷ್ಣವೇ ನಮಃ → ಮಧುಸೂದನಾಯ ನಮಃ<br>
-    <span class="ENG">Govindaaya Namaha → Vishnave Namaha → Madhusuudanaaya Namaha<br></span>
-
     ತ್ರಿವಿಕ್ರಮಾಯ ನಮಃ → ವಾಮನಾಯ ನಮಃ → ಶ್ರೀಧರಾಯ ನಮಃ<br>
-    <span class="ENG">Trivikramaaya Namaha → Vaamanaaya Namaha → Sridharaaya Namaha<br></span>
-
     ಹೃಷೀಕೇಶಾಯ ನಮಃ → ಪದ್ಮನಾಭಾಯ ನಮಃ → ದಾಮೋದರಾಯ ನಮಃ<br>
-    <span class="ENG">Hrishikeshaaya Namaha → Padmanaabhaaya Namaha → Daamoodaraaya Namaha<br></span>
-
     ಸಂಕರ್ಷಣಾಯ ನಮಃ → ವಾಸುದೇವಾಯ ನಮಃ → ಪ್ರದ್ಯುಮ್ನಾಯ ನಮಃ<br>
-    <span class="ENG">Sankarshanaaya Namaha → Vasudevaaya Namaha → Pradyumnaaya Namaha<br></span>
-
     ಅನಿರುದ್ಧಾಯ ನಮಃ → ಪುರುಷೋತ್ತಮಾಯ ನಮಃ → ಅಧೋಕ್ಷಜಾಯ ನಮಃ<br>
-    <span class="ENG">Aniruddhaaya Namaha → Purushottamaaya Namaha → Adhokshajaaya Namaha<br></span>
-
     ನಾರಸಿಂಹಾಯ ನಮಃ → ಅಚ್ಯುತಾಯ ನಮಃ → ಜನಾರ್ದನಾಯ ನಮಃ<br>
-    <span class="ENG">Narasimhaaya Namaha → Achyutaaya Namaha → Jaanardanaaya Namaha<br></span>
-
     ಉಪೇಂದ್ರಾಯ ನಮಃ → ಹರಯೇ ನಮಃ → ಶ್ರೀಕೃಷ್ಣಾಯ ನಮಃ<br>
-    <span class="ENG">Upendraaya Namaha → Haraye Namaha → Srikrishnaaya Namaha<br></span>
+
+    <span class="ENG">
+        Om Keshavaya Svaha → Om Narayanaya Svaha → Om Madhavaya Svaha<br>
+        Govindaaya Namaha → Vishnave Namaha → Madhusuudanaaya Namaha<br>
+        Trivikramaaya Namaha → Vaamanaaya Namaha → Sridharaaya Namaha<br>
+        Hrishikeshaaya Namaha → Padmanaabhaaya Namaha → Daamoodaraaya Namaha<br>
+        Sankarshanaaya Namaha → Vasudevaaya Namaha → Pradyumnaaya Namaha<br>
+        Aniruddhaaya Namaha → Purushottamaaya Namaha → Adhokshajaaya Namaha<br>
+        Narasimhaaya Namaha → Achyutaaya Namaha → Jaanardanaaya Namaha<br>
+        Upendraaya Namaha → Haraye Namaha → Srikrishnaaya Namaha<br>
+    </span>
 </p>
