--- a/general/kuladevata-prarthana.html
+++ b/general/kuladevata-prarthana.html
@@ -1,4 +1,7 @@
-<h2>ಕುಲದೇವ ಪ್ರಾರ್ಥನ <span class="ENG">(Kuladeva Prarthana)</span><audio controls="controls" src="../audio/veerabhadra-dhyana-sloka.mp3"></audio></h2>
+<div style="display: flex; align-items: center; gap: 1em; margin-bottom: 0.5em;">
+    <h2 style="margin: 0;">ಕುಲದೇವ ಪ್ರಾರ್ಥನ <span class="ENG">(Kuladeva Prarthana)</span></h2>
+    <audio controls="controls" src="../audio/veerabhadra-dhyana-sloka.mp3" style="vertical-align: middle;"></audio>
+</div>
 
 <p>
     <b>ಷಣ್ನೆತ್ರಾಂ</b> ತ್ರಿಮುಖಂ ಭೀಮಂ ಕಾಲಮೇಘ ಸಮಪ್ರ<b>ಭಾಂ</b> <br>
