--- a/general/pranayama.html
+++ b/general/pranayama.html
@@ -2,12 +2,9 @@
 
 <p>
     ಪೂರಕಂ ಕುಂಭಕಂ ಚೈವ ರೇಚಕಂ ತದನಂತರಂ<br>
-    <span class="ENG">
-        poorakaM kuMbhakaM chaiva raechakaM tadanaMtaraM<br>
-    </span>
-
     ಪ್ರಾಣಾಯಾಮ ಮಿದಂ ಪ್ರೋಕ್ತಂ ಸರ್ವ ದೇವ ನಮಸ್ಕೃತಂ<br>
     <span class="ENG">
+        poorakaM kuMbhakaM chaiva raechakaM tadanaMtaraM<br>
         praaNaayaama midaM prOktaM sarva daeva namaskRtaM<br>
     </span>
 </p>
@@ -18,5 +15,10 @@ or
     ಓಂ ಭೂಃ | ಓಂ ಭುವಃ | ಓಂ ಸುವಃ | ಓಂ ಮಹಃ | ಓಂ ಜನಃ | ಓಂ ತಪಃ | ಓಂ ಸತ್ಯಂ |<br>
     ಓಂ ತತ್ಸವಿತುರ್ವೇಣ್ಯಂ ಭರ್ಗೋ ದೇವಸ್ಯ ಧೀಮಹಿ ಧಿಯೋ ಯೋ ನಃ ಪ್ರಚೋದಯಾತ್ ||<br>
     ಓಂ ಅಪೋ ಜ್ಯೋತಿ ರಸೋಮೃತಂ ಬ್ರಹ್ಮ ಭೂ-ರ್ಭು-ವಸ್ಸುವರೋಮ್ ||
-</p>
 
+    <span class="ENG">
+        om bhooh om bhuvah om suvah om mahah om janah om tapah om satyam<br>
+        om tat-saviturvayam bhrgo devasya dhimahI dhiyo yoh pracodayaat<br>
+        om apo jyoti rosmRtam brahma bhU-r-bhuv-ssuvarom<br>
+    </span>
+</p>
