--- a/general/swasti.html
+++ b/general/swasti.html
@@ -1,27 +1,25 @@
-<h2>ಶಾಂತಿ ಮಂತ್ರ <span class="ENG">(Shanti Mantra)</span></h2>
+<div style="display: flex; align-items: center; gap: 1em; margin-bottom: 0.5em;">
+    <h2 style="margin: 0;">ಶಾಂತಿ ಮಂತ್ರ <span class="ENG">(Shanti Mantra)</span></h2>
+    <audio controls="controls" src="../audio/swasthi-mantra.mp3" style="vertical-align: middle;"></audio>
+</div>
 
 <p>
     Do you main Prarthana at this stage.
 </p>
 
 <p>
+
     ಸ್ವಸ್ತಿ ಪ್ರಜಾಭ್ಯಃ ಪರಿಪಾಲಯಂತಾಂ<br>
-    <span class="ENG">
-        swasti prajābhyaḥ paripālayantām<br>
-    </span>
+    ನ್ಯಾಯ್ಯೇನ ಮಾರ್ಗೇಣ ಮಹೀಂ ಮಹೀಶಾಃ |<br>
+    ಗೋಬ್ರಾಹ್ಮಣೇಭ್ಯಃ ಶುಭಮಸ್ತು ನಿತ್ಯಂ<br>
+    ಲೋಕಾಃ ಸಮಸ್ತಾಃ ಸುಖಿನೋ ಭವಂತು ||<br>
+    
+    ಕಾಲೇ ವರ್ಷತು ಪರ್ಜನ್ಯಃ ಪೃಥಿವೀ ಸಸ್ಯಶಾಲಿನೀ |<br>
+    ದೇಶೋऽಯಂ ಕ್ಷೋಭರಹಿತಃ ಬ್ರಾಹ್ಮಣಾಃ ಸಂತು ನಿರ್ಭಯಾಃ ||<br>
 
-    ನ್ಯಾಯೇನ ಮಾರ್ಗೇಣ ಮಹೀಂ ಮಹೀಶಾಃ ।<br>
-    <span class="ENG">
-        nyāyena mārgeṇa mahīṃ mahīśāḥ<br>
-    </span>
-
-    ಗೋಬ್ರಾಹ್ಮಣೇಭ್ಯಶ್ಶುಭಮಸ್ತು ನಿತ್ಯಂ<br>
-    <span class="ENG">
-        gobrāhmaṇebhyaśśubhamastu nityam<br>
-    </span>
-
-    ಲೋಕಾಸ್ಸಮಸ್ತಾಸ್ಸುಖಿನೋ ಭವಂತು ॥<br>
-    <span class="ENG">
-        lokāḥ-samastāḥ-sukhino bhavantu<br>
-    </span>
+    ಅಪುತ್ರಾಃ ಪುತ್ರಿಣಃ ಸಂತು ಪುತ್ರಿಣಃ ಸಂತು ಪೌತ್ರಿಣಃ |<br>
+    ಅಧನಾಃ ಸಧನಾಃ ಸಂತು ಜೀವಂತು ಶರದಾಂ ಶತಮ್ ||<br>
+    
+    ಮಂಗಲಂ ಕೋಸಲೇಂದ್ರಾಯ ಮಹನೀಯಗುಣಾತ್ಮನೇ |<br>
+    ಚಕ್ರವರ್ತಿತನೂಜಾಯ ಸಾರ್ವಭೌಮಾಯ ಮಂಗಲಮ್ ||<br>
 </p>
