--- a/puja/vara-maha-lakshmi-puja.html
+++ b/puja/vara-maha-lakshmi-puja.html
@@ -16,68 +16,93 @@
 
     <button class="toggle-btn" onclick="toggleVisibility()">Show/Hide English Transliteration</button>
 
-    <p>
-        This puja serves three important purposes: performing the Varamahalakshmi Vratam, Sharavana Sukravaram
-        Lakshmi puja, and conducting the daily (Nitya) puja. When done regularly as a daily ritual,
-         it is believed to remove poverty and bring lasting prosperity to the household.
-    </p>
-
-    <p>
-        There are no restrictions for performing this puja. For better financial blessings, it is recommended
-        to have the husband present and seated during the ceremony. The puja can be conducted either
-        in the morning (Prabhathaveela) or in the evening (Pradosha veela). On the day of the puja, devotees
-        should observe celibacy, avoid non-vegetarian food, and consume only sattvic (pure, vegetarian) meals.
-    </p>
-
-    <h2>The Puja consists of five main parts:</h2>
-
-    <h3>Peetam & Kalasham</h3>
-    <img src="../images/peetam-kalasham.png" alt="Peetam and Kalasham" style="max-width:200px; height:auto;"><br>
-    Place a peetam (stool) on the floor, on the peetam:
-    <ul>
-        <li>First, apply rice flour moggu (rice flour rangoli design)</li>
-        <li>Add rice grains</li>
-        <li>Place a clean cloth over it</li>
-    </ul>
-    Prepare the kalasha pot:
-    <ul>
-        <li>Decorate sides with bottu</li>
-        <li>Tie a thread with flowers around the neck of pot</li>
-        <li>Add water, some akshata (rice mixed with turmeric) and coins</li>
-        <li>Prepare coconut, by smearing with turmeric & adding bottu</li>
-        <li>Decorate around the base of the pot with flowers</li>
-    </ul>
-    After the kalasha puja (reciting ..ಬಂಧ್ನಾಮಿ ..bandhnaami):
-    <ul>
-        <li>Place mango leaves around mouth of pot & seal with coconut</li>
-        <li>Wrap the top of the coconut with a cloth, like a cone</li>
-        <li>Insert bangles so the cloth does not unwrap</li>
-        <li>Place a flower on top of cloth cone</li>
-    </ul>
-
-    <h3>Puja with Shodashopachara (16-step) Puja</h3>
-    Note that main difference is about Anga puja (offering to the body parts of the deity),
-    this is only done during Sharavana Sukravaram Lakshmi puja & Varamahalakshmi puja.
-
-    <h3>Thooram Granthi Puja & Thoora Dhaaranam</h3>
-    Bunch nine cotton threads (thooram) together and knot (grathi) them nine times.
-    Place a flower in one of the nine knots (middle one). Recite nine mantras, offering
-    kumkum or akshata nine times to the thoorams.
-    
-    <h3>Vratha Katha - Chaarumathi Story</h3>
-    Recite the story of Chaarumathi, who is believed to have performed this puja for
-    the first time. The story is symbolic and should not be interpreted literally.
-
-    <h3>Vayana Pradhaanam with Mantra</h3>
-    <ul>
-        <li>While the lady is standing, apply:</li>
+    <div class="section">
+        <p>This puja serves three key purposes:</p>
         <ul>
-            <li>Kumkum tn the forehead</li>
-            <li>Chandanam to the cheeks</li>
-            <li>Turmeric to both feet</li>
+            <li>Varalakshmi Vratam</li>
+            <li>Sharavana Sukravaram Lakshmi Puja</li>
+            <li>Daily (Nitya) Puja</li>
         </ul>
-        Then make the lady sit, recite the mantra (indira prathigrhnaatu..) while giving the offerings.
-    </ul>
+        <p>
+            When performed regularly, it is believed to remove poverty and bring lasting prosperity
+            to the household.
+        </p>
+        <p>
+            There are no restrictions for performing this puja. For enhanced financial blessings,
+            it is recommended that the husband be present and seated during the ceremony.
+            The puja can be conducted in the morning (Prabhathaveela) or evening (Pradosha veela).
+            On the day of the puja, devotees should observe celibacy, avoid non-vegetarian food,
+            and consume only sattvic (pure vegetarian) meals.
+        </p>
+    </div>
+
+    <div class="section">
+        <h2>Main Parts of the Puja</h2>
+
+        <h3>1. Peetam and Kalasham Preparation</h3>
+
+        <img src="../images/peetam-kalasham.png" alt="Peetam and Kalasham Preparation"
+            style="max-width:200px; height:auto;">
+        <ul>
+            <li>Place a peetam (stool) on the floor.</li>
+            <li>On the peetam:
+                <ul>
+                    <li>Draw a rice flour rangoli (moggu)</li>
+                    <li>Spread rice grains</li>
+                    <li>Cover with a clean cloth</li>
+                </ul>
+            </li>
+            <li>Prepare the kalasha:
+                <ul>
+                    <li>Decorate with bottu (bindis)</li>
+                    <li>Tie a thread with flowers around the neck</li>
+                    <li>Fill with water, akshata (turmeric rice), and coins</li>
+                    <li>Smear a coconut with turmeric and add bottu</li>
+                    <li>Decorate the base with flowers</li>
+                </ul>
+            </li>
+            <li>After reciting the kalasha puja mantra (“bandhnaami…”):
+                <ul>
+                    <li>Insert mango leaves into the pot</li>
+                    <li>Seal with the coconut</li>
+                    <li>Wrap the top with a cloth in cone shape</li>
+                    <li>Secure with bangles</li>
+                    <li>Place a flower on top</li>
+                </ul>
+            </li>
+        </ul>
+
+        <h3>2. Shodashopachara Puja (16-step Worship)</h3>
+        <p>
+            This includes offerings to the deity. Anga Puja (offering to body parts of the deity)
+            is performed only during Sharavana Sukravaram and Varamahalakshmi pujas.
+        </p>
+
+        <h3>3. Thooram Granthi Puja & Thoora Dhaaranam</h3>
+        <ul>
+            <li>Bunch nine cotton threads (thooram) and tie nine knots (granthi)</li>
+            <li>Place a flower in the middle knot</li>
+            <li>Recite nine mantras, offering kumkum or akshata each time</li>
+        </ul>
+
+        <h3>4. Vratha Katha – Chaarumathi Story</h3>
+        <p>
+            Recite the symbolic story of Chaarumathi, believed to be the first to perform this puja.
+            It should be understood symbolically, not literally.
+        </p>
+
+        <h3>5. Vayana Pradhaanam (Offering Ritual)</h3>
+        <ul>
+            <li>While the woman stands:
+                <ul>
+                    <li>Apply kumkum to the forehead</li>
+                    <li>Apply sandalwood paste to the cheeks</li>
+                    <li>Apply turmeric to both feet</li>
+                </ul>
+            </li>
+            <li>Then, while she sits, recite the mantra (“Indira prathigrhnaatu…”) and give the offerings</li>
+        </ul>
+    </div>
 
     <div id="shuddikarana-mantra"></div>
     <div id="ganapati-prarthana"></div>
@@ -169,7 +194,8 @@
 
         ಆದೌ ನಿರ್ವಿಘ್ನ-ಪರಿ-ಸಮಾಪ್ತ-ಯರ್ಥಂ ಶ್ರೀ ಮಹಾ-ಗಣಪತಿ-ಪೂಜಾಂ ಕರಿಷ್ಯೇ ॥<br>
         <span class="ENG">Ādau nirvighna-pari-samāpti-artham śrī mahāgaṇapatipūjāṃ kariṣye ||
-            At the beginning, for the successful completion without obstacles, I will perform the worship of the revered Mahaganapati<br></span><br>
+            At the beginning, for the successful completion without obstacles, I will perform the worship of the revered
+            Mahaganapati<br></span><br>
 
         ಶ್ರೀ ಮಹಾಗಣಪತಯೇ ನಮಃ - ಧ್ಯಾಯಾಮಿ |<br>
         <span class="ENG">Śrī Mahāgaṇapataye Namaḥ - Dhyāyāmi |<br></span>
@@ -207,15 +233,8 @@
         ಶ್ರೀ ಮಹಾಗಣಪತಯೇ ನಮಃ - ನೈವೇದ್ಯಂ ಸಮರ್ಪಯಾಮಿ |<br>
         <span class="ENG">Śrī Mahāgaṇapataye Namaḥ - Naivedyaṃ Samarpayāmi |<br></span><br>
 
-        ಸತ್ಯಂ ತ್ವರ್ತೇನ ಪರಿಷಿಂಚಾಮಿ | ಅಮೃತಮಸ್ತು | ಅಮೃತೋಪಸ್ತರಣಮಸೀ | ಸ್ವಾಹಾ ||<br>
-        <span class="ENG">Satyam tvartena parishinchami. Amrutam astu. Amrutopastaranam asi. Swaha.
-            O sacred seat, I sprinkle you with sincerity. May you be immortal nectar; you are the immortal covering/seating for the deity.<br></span>
 
-        ಓಂ ಪ್ರಾಣಾಯ ಸ್ವಾಹಾ | ಓಂ ಅಪಾನಾಯ ಸ್ವಾಹಾ | ಓಂ ವ್ಯಾನಾಯ ಸ್ವಾಹಾ | ಓಂ ಉದಾನಾಯ ಸ್ವಾಹಾ | ಓಂ ಸಮಾನ್ಯಾಯ ಸ್ವಾಹಾ ||<br>
-        <span class="ENG">Om Pranaya Swaha. Om Apanaya Swaha. Om Vyanaya Swaha. Om Udanaya Swaha. Om Samanaya Swaha.<br></span>
-
-        ಮಧ್ಯೇ ಮಧ್ಯೇ ಪಾನೀಯಂ ಸಮರ್ಪಯಾಮಿ | ಅಮೃತಮಸ್ತು | ಅಮೃತಾಪಿಧಾನಮಸೀ | ಸ್ವಾಹಾ ||<br>
-        <span class="ENG">Madhyamadhye paniyam samarpayami. Amrutam astu. Amrutapidhana-m asi. Swaha.</span><br>
+        <div id="parisinchana"></div>
 
         ಶ್ರೀ ಮಹಾಗಣಪತಯೇ ನಮಃ - ತಾಂಬೂಲಂ ಸಮರ್ಪಯಾಮಿ |<br>
         <span class="ENG">Śrī Mahāgaṇapataye Namaḥ - Tāmbūlaṃ Samarpayāmi |<br></span><br>
@@ -483,7 +502,7 @@
         ನೈವೇದ್ಯಂ <span class="ENG">(Naivedyam)</span>
     </h2>
     <p>
-        ಸರ್ಕರಾಮಧು ಸಂಯುಕ್ತಂ, <b>ಆಜ್ಯಾದೈಃ </b> ಅಧಪೂರಿತಂ<br>                               
+        ಸರ್ಕರಾಮಧು ಸಂಯುಕ್ತಂ, <b>ಆಜ್ಯಾದೈಃ </b> ಅಧಪೂರಿತಂ<br>
         <span class="ENG">Sarkaraamadhu saMyuktaM, aaj-yaa-dai: adhapooritaM<br></span>
 
         ಗೃಹಾಣ ದುರ್ಗೇ ನೈವೇದ್ಯಂ, ಮಹಿಷಾಸುರ ಮರ್ದಿನಿ<br>
@@ -493,21 +512,11 @@
         <span class="ENG">śrī varamahālakṣmī devyai namaḥ naivaedyaM samarpayaami</span>
     </p>
 
+
     <h2>ಪಾನೀಯ ಸಮರ್ಪಣೆ <span class="ENG">(Offering of Drink)</span></h2>
+    <div id="parisinchana"></div>
+
     <p style="background-color: #F0DDD6;">
-        ಸತ್ಯಂ ತ್ವರ್ತೇನ ಪರಿ-ಷಿಂಚಾಮಿ (Morning) / ಋತಂ ತ್ವಾ ಸತ್ಯೇನ ಪರಿ-ಷಿಂಚಾಮಿ (Evening)<br>
-        <span class="ENG">Satyaṁ tvarteṇa pariṣimchāmi (Morning) / Ṛtaṁ tvā satyena pariṣimchāmi (Evening)<br></span>
-
-        ಅಮೃತಮಸ್ತು ಅಮೃತೋಪಸ್ತರಣಮಸಿ<br>
-        <span class="ENG">Amṛtamastu amṛtopastaraṇamasi</span><br>
-
-        ಓಂ ಪ್ರಾಣಂ ನಮಃ ಅಪಾನಂ ನಮಃ ವ್ಯಾನಂ ನಮಃ ಉದಾನಂ ನಮಃ ಸಮಾನಂ ನಮಃ<br>
-        <span class="ENG">Om prāṇaṁ namaḥ - apānaṁ namaḥ - vyānaṁ namaḥ<br>
-            udānaṁ namaḥ - samānaṁ namaḥ</span><br>
-
-        ಮಧ್ಯೇ ಮಧ್ಯೇ ಪಾನೀಯಂ ಸಮರ್ಪಯಾಮಿ - ಅಮೃತಮಸ್ತು ಅಮೃತಾಪಿಧಾನಮಸಿ<br>
-        <span class="ENG">Madhye madhye pānīyaṁ samarpayāmi - amṛtamastu amṛtāpidhānamasi</span><br>
-
         ಓಂ ಪರಬ್ರಹ್ಮಣೇ ನಮಃ ಸರ್ವೇಭ್ಯಃ ದೇವೇಭ್ಯಃ ನಮಃ<br>
         ಉತ್ತರಾ ಪೊಷಣಂ ಸಮರ್ಪಯಾಮಿ, ಹಸ್ತಾ ಪ್ರಕ್ಷಾಳನಂ ಸಮರ್ಪಯಾಮಿ<br>
         ಪಾದ ಪ್ರಕ್ಷಾಳನಂ ಸಮರ್ಪಯಾಮಿ, ಶುದ್ಧಾಚಮಣೀಯಂ ಸಮರ್ಪಯಾಮಿ<br>
@@ -623,37 +632,25 @@
 
         <b>Wear toram while chanting below mantra:</b><br>
 
-        ಬಂಧ್ನಾಮಿ ದಕ್ಷಿಣೇಹಸ್ತೇ ನವಸೂತ್ರಂ ಶುಭಪ್ರದಂ<br>
-        <span class="ENG">Bandhnāmi dakṣiṇēhaste navasūtraṁ śubhapradaṁ<br></span>
-        ಪುತ್ರಪೌತ್ರಾಭಿವೃದ್ದಿಂಚ ಸೌಭಾಗ್ಯಂ ದೇಹಿಮೇ ರಮೇ<br>
-        <span class="ENG">Putrapautrābhivṛddhiṁca saubhāgyaṁ dēhime ramē</span>
+        ಬಂಧ್ನಾಮಿ ದಕ್ಷಿಣೇ ಹಸ್ತೇ ನವಸೂತ್ರಂ ಶುಭಪ್ರದಂ<br>
+        <span class="ENG">Bandhnāmi dakṣiṇē haste navasūtraṁ śubhapradaṁ<br></span>
+        ಪುತ್ರಪೌತ್ರಾಭಿ ವೃದ್ದಿಂ ಚ ಸೌಭಾಗ್ಯಂ ದೇಹಿ ಮೇ ರಮೇ<br>
+        <span class="ENG">Putrapautrābhi vṛddhiṁ cha saubhāgyaṁ dēhi mae ramē</span>
     </p>
 
     <h2>ವಾಯನ ದಾನಂ <span class="ENG">(Vaayana Dhaanam)</span></h2>
     <p style="background-color: #F0DDD6;">
+
         <b>Chant this mantra and give vaayanam (offerings to ladies):</b><br>
 
-        ಇಂದಿರಾ ಪ್ರತಿಗೃಹ್ಣಾತು ಇಂದಿರಾವೈ ದದಾತಿಚ<br>
-        <span class="ENG">Indirā pratigṛhṇātu indirāvai dadātica<br></span>
+        ಇಂದಿರಾ ಪ್ರತಿಗೃಹ್ಣಾತು ಇಂದಿರಾ ವೈ ದದಾತಿ ಚ<br>
+        <span class="ENG">Indirā pratigṛhṇātu indirā vai dadāti cha<br></span>
 
-        ಇಂದಿರಾ ತಾರಕೋಭಾಭ್ಯಾಂ ಇಂದಿರಾಯೈ ನಮೋ ನಮಃ
-        <br><span class="ENG">Indirā tārakōbhābhyāṁ indirāyai namō namaḥ</span>
+        ಇಂದಿರಾ ತಾರಕೋಭಾಭ್ಯಾಂ ಇಂದಿರಾಯೈ ನಮೋನಮಃ
+        <br><span class="ENG">Indirā tārakōbhābhyāṁ indirāyai namōnamaḥ</span>
     </p>
 
     <div id="swasti"></div>
-    <h2>ಶಾಂತಿ ಮಂತ್ರ <span class="ENG">(Shanti Mantra)</span></h2>
-    <p style="background-color: #F0DDD6;">
-        ಕಾಲೇ ವರ್ಷತು ಪರ್ಜನ್ಯಃ ಪೃಥಿವೀ ಸಸ್ಯ ಶಾಲಿನೀ<br>
-        <span class="ENG">Kāle varṣatu parjanyaḥ pṛthivī sasya śālinī<br></span>
-        ದೇಶೋಯಂ ಕ್ಷೋಭರಹಿತೋ ಬ್ರಹ್ಮಣಾ ಸಂತು ನಿರ್ಭಯಃ<br>
-        <span class="ENG">Deśoyaṁ kṣobha rahito brahmaṇā santu nirbhayaḥ<br></span>
-        ಅಪುತ್ರಾಃ ಪುತ್ರಿಣಃ ಸಂತು ಪುತ್ರಿಣಿ ಸಂತು ಪೌತ್ರಿಣಃ<br>
-        <span class="ENG">Aputrāḥ putriṇaḥ santu putriṇi santapautriṇaḥ<br></span>
-        ಅಧಾನಾಃ ಸಧನಾಃ ಸಂತು ಜೀವಂತು ಶರದಾಂ ಶತಂ<br>
-        <span class="ENG">Adhānāḥ sādhanāḥ santu jīvantu śaradāṁ śataṁ</span>
-    </p>
-
-
 
     <!-- Centralized Scripts -->
     <script src="../scripts/common.js"></script>
