--- a/puja/vara-maha-lakshmi-puja.html
+++ b/puja/vara-maha-lakshmi-puja.html
@@ -140,49 +140,7 @@
 
     <div id="ghantaa-nadham"></div>
 
-    <h1>ಕಲಶಾರಾಧನ <span class="ENG">(Kalasha Arādhana)</span></h1>
-    <p style="background-color: #F0DDD6;">
-
-        <b>To the kalasha water, offer akshatas, mix with mango leaves while reciting the following mantra:</b><br>
-
-        ಕಲಶಸ್ಯ ಮುಖೇ ವಿಷ್ಣುಃ ಕಂಠೇ ರುದ್ರಸ್ಸಮಾಶ್ರಿತಃ <br>
-        <span class="ENG">kalashasya mukhe viṣṇuḥ kaṇṭhe rudraḥ samāśritaḥ
-            At the mouth (top) of the Kalasha resides Vishnu,
-            At the neck of the Kalasha resides Rudra<br></span>
-
-        ಮೂಲೇ ತತ್ರ ಸ್ಥಿತೋ ಬ್ರಹ್ಮಾ ಮಧ್ಯೆ ಮಾತೃಗಣಾಃ ಸ್ಮೃತಾಃ <br>
-        <span class="ENG">mūle tatra sthito brahmā madhye mātr̥gaṇāḥ smṛtāḥ
-            At the base of the Kalasha is Brahma
-            In the middle are said to dwell the Matrikas (Mother Goddesses).<br></span>
-
-        ಕುಕ್ಷೌ ತು ಸಾಗರಾಃ ಸರ್ವೇ ಸಪ್ತದ್ವೀಪಾ ವಸುಂಧರಾ <br>
-        <span class="ENG">kukṣau tu sāgarāḥ sarve saptadvīpā vasundharā
-            In the belly of the Kalasha are all the oceans
-            The seven continents and the Earth herself<br></span>
-
-        ಋಗ್ವೇದೋ ಥ ಯಜುರ್ವೇದಸ್ಸಾಮವೇದೋ ಹ್ಯಥರ್ವಣಃ <br>
-        <span class="ENG">ṛgvedo'tha yajurvedaḥ sāmavedo hyatharvaṇaḥ
-            The Rigveda, Yajurveda, Samaveda, and indeed the Atharvaveda<br></span>
-
-        ಅಂಗೈಶ್ಚ ಸಹಿತಾಃ ಸರ್ವೇ ಕಲಶಾಂಬು ಸಮಾಶ್ರಿತಾಃ <br>
-        <span class="ENG">aṅgaiśca sahitāḥ sarve kalaśāmbu samāśritāḥ
-            Together with all their limbs, they are all established in the water of the Kalasha.<br></span>
-
-        ಗಂಗೆಚ ಯಮುನೇಚೈವ ಗೋದಾವರಿ ಸರಸ್ವತೀ <br>
-        <span class="ENG">gaṅgeca yamunecaiva godāvari sarasvatī
-            Ganga, Yamuna, Godavari, and Saraswati<br></span>
-
-        ನರ್ಮದಾ ಸಿಂಧು ಕಾವೇರಿ ಜಲೆಸ್ಮಿನ್ ಸನ್ನಿಧಿಂ ಕುರು <br>
-        <span class="ENG">narmadā sindhu kāveri jalesmin sannidhiṁ kuru
-            Narmada, Sindhu, and Kaveri
-            Establish your divine presence in this water
-            <br></span><br>
-
-        <b>Pour kalasha water over us & puja items, while reciting mantra:</b><br>
-
-        ಪೂಜಾದ್ರವ್ಯಾಣಿ ದೇವಂ ಆತ್ಮಾನಂ ಸಂಪ್ರೋಕ್ಷ್ಯ <br>
-        <span class="ENG">pūjādravyāṇi devaṁ ātmānaṁ samprokṣya<br></span>
-    </p>
+    <div id="kalashaaradhana"></div>
 
     <h1>ಗಣಪತಿ ಪೂಜೆ<span class="ENG">(Ganapati Puja)</span></h1>
     <p style="background-color: #F0DDD6;">
@@ -232,7 +190,6 @@
 
         ಶ್ರೀ ಮಹಾಗಣಪತಯೇ ನಮಃ - ನೈವೇದ್ಯಂ ಸಮರ್ಪಯಾಮಿ |<br>
         <span class="ENG">Śrī Mahāgaṇapataye Namaḥ - Naivedyaṃ Samarpayāmi |<br></span><br>
-
 
         <div id="parisinchana"></div>
 
@@ -512,11 +469,22 @@
         <span class="ENG">śrī varamahālakṣmī devyai namaḥ naivaedyaM samarpayaami</span>
     </p>
 
-
-    <h2>ಪಾನೀಯ ಸಮರ್ಪಣೆ <span class="ENG">(Offering of Drink)</span></h2>
-    <div id="parisinchana"></div>
-
+    <h2>ಪರಿಷಿಂಚನ <span class="ENG">(Pariṣiñchana)</span></h2>
     <p style="background-color: #F0DDD6;">
+        ಸತ್ಯಂ ತ್ವರ್ತೇನ ಪರಿಷಿಂಚಾಮಿ | (morning) <br>
+        ಋತಂ ತ್ವಾ ಸತ್ಯೇನ ಪರಿಷಿಂಚಾಮಿ | (evening) <br>
+        ಅಮೃತಮಸ್ತು ಅಮೃತೋಪಸ್ತರಣಮಸಿ | ಸ್ವಾಹಾ || <br><br>
+
+        ಪ್ರಾಣಾಯ ಸ್ವಾಹಾ | <br>
+        ಅಪಾನಾಯ ಸ್ವಾಹಾ | <br>
+        ವ್ಯಾನಾಯ ಸ್ವಾಹಾ | <br>
+        ಉದಾನಾಯ ಸ್ವಾಹಾ | <br>
+        ಸಮಾನಾಯ ಸ್ವಾಹಾ | <br>
+        ಬ್ರಹ್ಮಣೇ ಸ್ವಾಹಾ || <br><br>
+
+        ಮಧ್ಯೇ ಮಧ್ಯೇ ಪಾನೀಯಂ ಸಮರ್ಪಯಾಮಿ | <br>
+        ಅಮೃತಮಸ್ತು ಅಮೃತಾಪಿಧಾನಮಸಿ | ಸ್ವಾಹಾ || <br><br>
+
         ಓಂ ಪರಬ್ರಹ್ಮಣೇ ನಮಃ ಸರ್ವೇಭ್ಯಃ ದೇವೇಭ್ಯಃ ನಮಃ<br>
         ಉತ್ತರಾ ಪೊಷಣಂ ಸಮರ್ಪಯಾಮಿ, ಹಸ್ತಾ ಪ್ರಕ್ಷಾಳನಂ ಸಮರ್ಪಯಾಮಿ<br>
         ಪಾದ ಪ್ರಕ್ಷಾಳನಂ ಸಮರ್ಪಯಾಮಿ, ಶುದ್ಧಾಚಮಣೀಯಂ ಸಮರ್ಪಯಾಮಿ<br>
