--- a/stotram/venkateswara-stotram.html
+++ b/stotram/venkateswara-stotram.html
@@ -126,7 +126,7 @@
                                     ]
                                 }
                             ],
-                            completeMeaning: "O Lord of Venkata Hill, whose incomparable dark-blue body is reddened by the vermilion from the breasts of Goddess Lakshmi, whose eyes are like lotus petals, O Lord of the worlds, be ever victorious."
+                            completeMeaning: "Lotus like breasts of Lord are ever red with the stains of kumkum that is being sprinkled on his chest during the daily worships, whereas his body is blue-colored. Victory to Thee, O Lord of Venkata hill, whose eyes are wide like lotus petals."
                         },
                         {
                             verseNumber: 2,
@@ -231,7 +231,7 @@
                                     ]
                                 }
                             ],
-                            completeMeaning: "O Lord of Vrishabhachala (Venkata Hill), the crown jewel among all gods including Brahma (four-faced), Kartikeya (six-faced), and Shiva (five-faced), O treasure of compassion for devotees who surrender to You — please protect me."
+                            completeMeaning: "Including the four-faced Brahma, six-faced Kumaraswamy (Subrahmanya swami), and five-faced Hanuman, you are the greatest crown jewel among all angels. You are the abode of kindness to those who submit themselves at your feet. O Lord of Vrisha hill, save me."
                         }
                         ,
                         {
@@ -342,7 +342,7 @@
                                     ]
                                 }
                             ],
-                            completeMeaning: "O Lord of Vrishabhachala, because of my great carelessness, I am filled with unbearable sins and countless offences. Please, O Hari, protect me quickly with Your supreme compassion."
+                            completeMeaning: "Extremely trembling on being committed various sins and hundreds of wrong deeds, I came running speedily to submit myself at your feet."
                         },
                         {
                             verseNumber: 4,
@@ -462,7 +462,7 @@
                                     ]
                                 }
                             ],
-                            completeMeaning: "O noble-minded Lord of Venkata Hill, who is ever engaged in abundantly granting the wishes of the devotees, whom the Vedas declare as the Supreme Deity, the beloved of Goddess Lakshmi — I know no other beyond You."
+                            completeMeaning: "O bounteous Lord of Venkata hill, who gives away always more than what your devotees desire, all the other angels (gods) are also saluting to you, and none is equal to you."
                         },
                         {
                             verseNumber: 5,
@@ -544,7 +544,7 @@
                                             meaning: "beloved, desired one"
                                         },
                                         {
-                                            kannada: "ಸുഖದಾತ್",
+                                            kannada: "ಸುಖದಾತ್",
                                             transliteration: "sukha-dāt",
                                             meaning: "giver of joy"
                                         }
@@ -582,7 +582,7 @@
                                     ]
                                 }
                             ],
-                            completeMeaning: "I know none higher than the son of Vasudeva (Krishna), who enchants the wives of cowherds with the sweet music of His flute, who is surrounded by countless gopīs, who is as charming as millions of Cupids, and who gives joy to each gopī as their beloved."
+                            completeMeaning: "With an enchanting music from your flute, you attracted the gopis and bestowed each one of them with their desired happiness that is equal to the happiness obtained from hundred crore penances or crores of prayers. O Son of VasudEva (Krishna), none is equal to you."
                         },
                         {
                             verseNumber: 6,
@@ -677,7 +677,7 @@
                                     ]
                                 }
                             ],
-                            completeMeaning: "O Lord Rama, descendant of Dasharatha, delightful and bestower of virtues, the sole wielder of the bow, courageous-minded, leader of the Raghu dynasty, mighty Rameshvara, giver of boons, protector of the world, and ocean of compassion!"
+                            completeMeaning: "You have been the lovely and virtuous son of Dasharatha;you arethe only courageous and great archer of the entire world, the chief of Raghukula, the pleasing and entertaining Lord. Please grant the boon to me, O Lord and Ocean of Mercy."
                         },
                         {
                             verseNumber: 7,
@@ -762,7 +762,7 @@
                                     ]
                                 }
                             ],
-                            completeMeaning: "O Raghurama, the embodiment of the Raghu dynasty, with captivating eyes and charming deeds, whose face is as beautiful as moonlight, radiant and silvery, magnificent and most charming!"
+                            completeMeaning: "Your pretty hands are held by the daughter of Earth, Sita; and you are beautiful with your lotus-like face resembling the moon. You are the king dispelling all the darkness by walking in the nights. Grant me refuge O Rama of Raghu clan."
                         },
                         {
                             verseNumber: 8,
@@ -862,7 +862,7 @@
                                     ]
                                 }
                             ],
-                            completeMeaning: "I do not worship anyone else, O Lord! You are pleasant-faced, benevolent, easily approachable, and giver of happiness. You are dear, unfailing in power, and I hold only You in my mind."
+                            completeMeaning: "You are pleasant-faced, good-hearted, easily reachable, and you are the provider of happiness along with your brothers and with a never-ending flow of arrows. So, I never pray to anyone else even for a while except you, O Rama."
                         },
                         {
                             verseNumber: 9,
@@ -947,7 +947,7 @@
                                     ]
                                 }
                             ],
-                            completeMeaning: "There is no Lord like Venkateswara. I always remember Him. O Hari, be pleased and show grace, and grant me Your beloved blessings!"
+                            completeMeaning: "Without you, O Venkateshwara, I am an orphan. I always keep remembering your name. O Venkatesa, kindly be pleased with me and bestow me with your love and grace."
                         },
                         {
                             verseNumber: 10,
@@ -1037,7 +1037,7 @@
                                     ]
                                 }
                             ],
-                            completeMeaning: "I, from afar, approach Your sacred lotus feet with reverent obeisance and perform service. O Lord Venkateswara, grant me the merit of this service and the fruits of daily worship!"
+                            completeMeaning: "I have been far away from your lotus-like feet and have now come with a wish to serve the feet. So, Lord Venkatesha, I request you, again and again, please allow me the benefit of performing a good service to you."
                         },
                         {
                             verseNumber: 11,
@@ -1085,7 +1085,7 @@
                                     ]
                                 }
                             ],
-                            completeMeaning: "O Lord Venkateswara, due to my ignorance I have committed countless sins. Please forgive me, O jewel atop Shesha Hill!"
+                            completeMeaning: "The sins committed by me are all simply due to the sheer ignorance of mine; so kindly please pardon me, pardon me, O jewel of Sesha Shaila Mountain."
                         }
 
                     ]
